# CompGIT

./: .gitignore  Git.sage  README.md  _doctest_environment.py  citations  examples.sage  examples.sage.py  finding_rays_exceptional.ipynb  output.txt  projections.py  pyproject.toml  setup.py  tox.ini
CompGIT/: Git.py  SimpleGroup.py  SimpleGroup.sage  __init__.py
Computations/: finding_rays_exceptional.ipynb  gamma_rays.py
Notes/: To-do's.txt  To-do.txt
Output examples/Byun-Lee quotients/: Degree 3.txt  Degree 4.txt  Degree 5.txt  Degree 6.txt  Degree 7.txt  Degree 8.txt
Output examples/More cubics/: Cubic fivefolds  Cubic fourfolds
Output examples/Nets of quadrics/: In P2  In P3
Output examples/Pencils of cubics/: In P2
Output examples/Pencils of quadrics/: In P2  In P3  In P4  In P5
Output examples/Plane projective curves/: Degree 10.txt  Degree 11.txt  Degree 12.txt  Degree 13.txt  Degree 14.txt  Degree 15.txt  Degree 2.txt  Degree 3.txt  Degree 4.txt  Degree 5.txt  Degree 6.txt  Degree 7.txt  Degree 8.txt  Degree 9.txt
Output examples/Surfaces in P3/: Degree 2.txt  Degree 3.txt  Degree 4.txt  Degree 5.txt  Degree 6.txt
Output examples/Threefolds in P4/: Degree 2.txt  Degree 3.txt  Degree 4.txt  Degree 5.txt
