[build-system]
requires = ["setuptools >= 61.0"] # there may be more requirements to add
build-backend = "setuptools.build_meta"

[project]
name = "CompGIT”
version = "0.1"
classifiers = ["License :: GPL-3.0 license]
description = "Library for Geometric Invariant Theory (GIT) in Sagemath. Its algorithms describe the unstable, non-stable and stictly polystable loci of n-dimensional projective space acted upon by a simple group. Based on P. Gallardo, J. Martinez-Garcia, H.-B. Moon, D. Swinarski. Computation of GIT quotients of semisimple groups.”
readme = "README.md"
requires-python = ">=3.0”
dependencies = [sage]

[tool.setuptools]
packages = [
    “CompGIT”,
]
