[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CompGIT"
version = "0.1"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Patricio Gallardo"}, 
    {name = "Robert Hanson"},
    {name = "Jesus Martinez-Garcia"},
    {name = "Han-Bom Moon"}, 
    {name = "David Swinarski"},
    ]
keywords = ["SageMath", "geometry"]
classifiers = [
      "Development Status :: 5 - Production/Stable",
      "Intended Audience :: Science/Research",
      "Topic :: Mathematics",
      "License :: GNU GENERAL PUBLIC LICENSE VERSION 3",
      "Programming Language :: Python :: 3"
    ]
requires-python = ">=3.9"

[project.optional-dependencies]
passagemath = [
  "passagemath-combinat",
  "passagemath-graphs",
  "passagemath-groups",
  "passagemath-modules",
  "passagemath-polyhedra",
  "passagemath-repl",
]

[tool.setuptools]
packages = [
"CompGIT",
]
